--- a/pqcrypto-internals/Cargo.toml
+++ b/pqcrypto-internals/Cargo.toml
@@ -14,5 +14,7 @@ cc = { version = "1.0", features = ["parallel"] }
 dunce = "1.0.2"
 
 [dependencies]
-getrandom = "0.2"
 libc = "0.2"
+
+[dev-dependencies]
+getrandom = "0.2"
