--- a/pqcrypto-internals/Cargo.toml
+++ b/pqcrypto-internals/Cargo.toml
@@ -14,5 +14,5 @@ cc = { version = "1.0", features = ["parallel"] }
 dunce = "1.0.2"
 
 [dependencies]
-getrandom = { version = "0.2", features = ["js"] }
+# getrandom = { version = "0.2", features = ["js"] }
 libc = "0.2"
